--- a/Soñando con Suculentas/css/style.css
+++ b/Soñando con Suculentas/css/style.css
@@ -100,6 +100,18 @@ div.offcanvas-header {
     text-align: center;
 }
 
+img.card-img-top {
+    transition: all 0.5s linear;
+    overflow: hidden;
+}
+
+img.card-img-top:hover {
+    transform: scale(1.5, 1.5);
+}
+
+div#div-img {
+    overflow: hidden;
+}
 
 /*********************** Footer ************************/
 
